--- a/agent/configs/agent.yaml
+++ b/agent/configs/agent.yaml
@@ -1,4 +1,4 @@
-source_name: test-agent-makasym
+source_name: test-agent-maksym
 # 10s 20m 1h
 interval: 30s
 # Enable or disable metric collecting entities
@@ -7,4 +7,4 @@ memory: true
 # NEVER change <host_identificator> manually.
 # It is generated autumaticallly by Agent.
 # It provides uniqness of you Agent Collector.
-host_identificator: 828434dc-0300-4ef2-a233-4dc631cc1c17
+host_id: 828434dc-0300-4ef2-a233-4dc631cc1c17
