--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,5 @@ services:
       yum update -y &&
       yum install -y python3-devel libevent-devel gcc &&
       yum install -y python3 python3-pip &&
-      pip install -r /collector/agent/requirements.txt &&
+      pip3 install -r /collector/agent/requirements.txt &&
       python3 agent.py --ip 192.168.1.50 --port 5001 --config /configs/agent.yaml"
